--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <div class="mb-2">
                   <label>CEP</label>
                   <input id="cep" class="form-control" />
-                  <div class="small-muted">Ao preencher o CEP e sair do campo, o endereço será buscado via ViaCEP.</div>
+                  <div class="small-muted"></div>
                 </div>
                 <div class="mb-2">
                   <label>Endereço</label>
