--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     .logos{display: flex; justify-content: center; align-items: center;}
     .nav-tabs .nav-link {color: gray; margin-bottom: calc(-1 * var(--bs-nav-tabs-border-width));border: var(--bs-nav-tabs-border-width)1px solid transparent;border-top-left-radius: var(--bs-nav-tabs-border-radius);border-top-right-radius: var(--bs-nav-tabs-border-radius);}
     .card-body { margin: -25px 0px 0px 0px;flex: 1 1 auto;padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);color: var(--bs-card-color);}
+    .links{display: flex;}
+    .link{text-decoration: none; color: black; text-align: center;}
+    .link:hover{text-decoration: underline;}
   </style>
 </head>
 <body>
@@ -48,6 +51,11 @@
         <!--<button id="btnDemo" class="btn btn-outline-secondary">Entrar como Demo</button>-->
       </div>
       <p class="mt-3 small-muted">Chave fixa padrão</p>
+    </div>
+    <div class="links">
+      <a class="link" href="mensalidade.png">Tabela de menalidade</a>
+      <a class="link" href="">Classificação Veteranos</a>
+      <a class="link" href="">Classificação Livres</a>
     </div>
   </div>
 </div>
