--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <p class="mt-3 small-muted">Chave fixa padrão</p>
     </div>
     <div class="links">
-      <a class="link" href="https://acsoccer.github.io/Mensalidade/">Tabela de menalidade</a>
+      <a class="link" href="https://acsoccer.github.io/manutencao/">Tabela de menalidade</a>
       <a class="link" href="">Classificação Veteranos</a>
       <a class="link" href="">Classificação Livres</a>
     </div>
