--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="links">
       <a class="link" href="https://acsoccer.github.io/manutencao/">Tabela de menalidade</a>
       <a class="link" href="">Classificação Veteranos</a>
-      <a class="link" href="">Classificação Livres</a>
+      <a class="link" href="https://acsoccer.github.io/up/">Classificação Up</a>
     </div>
   </div>
 </div>
