--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="links">
       <a class="link" href="https://acsoccer.github.io/manutencao/">Tabela de menalidade</a>
-      <a class="link" href="">Classificação Veteranos</a>
+      <a class="link" href="https://acsoccer.github.io/veteranos/">Classificação Veteranos</a>
       <a class="link" href="https://acsoccer.github.io/up/">Classificação Up</a>
     </div>
   </div>
