--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>AC Soccer</title>
+  <title>AC Soccer Veteranos</title>
   <link rel="icon" href="SOCCER.png" type="image/x-icon">
   <link rel="icon" href="SOCCER.png" sizes="16x16" />
   <link rel="icon" href="SOCCER.png" sizes="32x32" type="image/png" />
@@ -41,7 +41,7 @@
       <img class="soccer" src="ACSoccer.png" alt="logo">
     </div>
     <div class="card-body">
-      <h4 class="card-title mb-3">Acesso Administrativo</h4>
+      <h4 class="card-title mb-3">Acesso Administrativo Veteranos</h4>
       <p>Insira a chave de acesso administrativa.</p>
       <div class="mb-3">
         <input type="password" id="adminKey" class="form-control" placeholder="Chave de acesso" />
@@ -50,7 +50,7 @@
         <button id="btnLogin" class="btn btn-primary">Entrar</button>
         <!--<button id="btnDemo" class="btn btn-outline-secondary">Entrar como Demo</button>-->
       </div>
-      <p class="mt-3 small-muted">Chave fixa padrão</p>
+      <p class="mt-3 small-muted"></p>
     </div>
     <div class="links">
       <a class="link" href="https://acsoccer.github.io/manutencao/">Tabela de menalidade</a>
