--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <p class="mt-3 small-muted"></p>
     </div>
     <div class="links">
-      <a class="link" href="https://acsoccer.github.io/manutencao/">Tabela de menalidade</a>
+      <a class="link" href="https://acsoccer.github.io/manutencao/">Manutenção do Ministério</a>
       <a class="link" href="https://acsoccer.github.io/veteranos/">Classificação Veteranos</a>
     </div>
   </div>
