--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="links">
       <a class="link" href="https://acsoccer.github.io/manutencao/">Manutenção do Ministério</a>
-      <a class="link" href="https://acsoccer.github.io/Classificacao/">Classificação Veteranos</a>
+      <a class="link" href="https://acsoccer.github.io/Classificacao/">Exibição</a>
     </div>
   </div>
 </div>
