--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     <div class="links">
       <a class="link" href="https://acsoccer.github.io/manutencao/">Manutenção do Ministério</a>
       <a class="link" href="https://acsoccer.github.io/Classificacao/">Exibição</a>
+      <a class="link" href="">Notas Fiscais</a>
     </div>
   </div>
 </div>
