--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="links">
       <a class="link" href="https://acsoccer.github.io/manutencao/">Manutenção do Ministério</a>
       <a class="link" href="https://acsoccer.github.io/Classificacao/">Exibição</a>
-      <a class="link" href="https://acsoccer.github.io/Notas-Fiscais/">Notas Fiscais</a>
+      <a class="link" href="https://acsoccer.github.io/Notas-Fiscais/">Notas</a>
     </div>
   </div>
 </div>
